css/main.css
/* CSS Document */

html {
   margin: 0px;
   height: 100%;
   width: 100%;
}

body {
   margin: 0px;
   min-height: 100%;
   width: 100%;
   z-index: 0;
}

/* NAVIGATION */
ul {
	position: fixed;
	width: 100%;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: black;
	z-index: 55;
}

li {
    float: left;
	z-index: 55;
}

li a {
    display: block;
    color: #D2B48C;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
	z-index: 55;
}

li a:hover {
    background-color: grey;
	z-index: 55;
}
/* FIN NAVIGATION */

.buttonIntro {
	-webkit-animation: neon2 1.5s ease-in-out infinite alternate;
  	-moz-animation: neon2 1.5s ease-in-out infinite alternate;
  	animation: neon2 1.5s ease-in-out infinite alternate;
}

@-webkit-keyframes neon2 {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228DFF, 0 0 70px #228DFF, 0 0 80px #228DFF, 0 0 100px #228DFF, 0 0 150px #228DFF;
  }
  to {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
  }
}


#souris {
	position:absolute;
}

.conteneur-jeu {
	width: absolute 1000px;
	height: absolute 1000px;
}

.village-jeu {
	background-image: url(../media/images/wallpaper-video-images-zelda-game-53834.jpg);
 	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: 300% auto;
  	min-height: 100vh;
  	z-index: 1;
	
  /* Background image is centered vertically and horizontally at all times */
  background-position: center center;
  
  /* Background image doesn't tile */
  background-repeat: no-repeat;
  
  
  /* Set a background color that will be displayed
     while the background image is loading */
  background-color: #464646;
}

.link {
  background: url(../media/images/sprite-static.png) no-repeat center center fixed; 
  /*-webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;*/
  background-size: 80px 100px;
}

.black-theme {
	background-color: black !important;
	color: green !important;	
}

.dark-background {
	background-image: url(../media/images/wallpaper-zelda.jpg);
 	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: 200% auto;
  	min-height: 100vh;
  	z-index: 1;
	
  	background-position: center center;
  
  	background-repeat: no-repeat;
  

  	background-attachment: fixed;

 	background-color: #464646;
	
	/* ANIMATION BLUR */
	/*-webkit-animation: image_blur 2s !important; 
 	-moz-transition: image_blur 2s !important;
	-ms-transition:image_blur 2s !important;
	-o-transition: image_blur 2s !important;*/
}

/*GALERIE */
.gallery {
  width: auto;
  margin: 0 auto;
  padding: 5px;
  /*background: black;*/
  box-shadow: 0 1px 2px rgba(0,0,0,.3);
}

.gallery > div {
  position: relative;
  float: left;
  padding: 5px;
}

.gallery > div > img {
  display: block;
  width: 200px;
  transition: .1s transform;
  transform: translateZ(0); /* hack */
}

.gallery > div:hover {
  z-index: 1;
}

.gallery > div:hover > img {
  transform: scale(1.8,1.8);
  transition: .3s transform;
}

.cf:before, .cf:after {
  display: table;
  content: "";
  line-height: 0;
}

.cf:after {
  clear: both;
}

/*@-webkit-keyframes blur-bg {
    0% { -webkit-filter: blur(0px);}
	50% { -webkit-filter: blur(5px);}
	100% { -webkit-filter: blur(0px);}
}*/


.blur {
  -webkit-animation: blur 3s infinite;
}

@-webkit-keyframes blur {
  0%, 100%  { -webkit-filter: blur(0px); }
  50% { -webkit-filter: blur(5px); }
}

.centre {
	width: 100px;
    height: 100px;
   /* background-color: cyan;*/

    position: fixed;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 50;
    margin: auto;
}

.bar-bas {
	position: fixed;
	background-color: black;
    width: 100%;
	bottom : 0;

	padding-top: 5pt;
	padding-bottom: 5pt;
}

.copyright {
	background-color: black;
	color: white;
	text-align: center;
	bottom: 0;
}

/**
 Icones
 
 Notes: "!important" permet d'appliquer la classe. Ne fonctionne pas autrement avec Uikit.
 L'animation est custom-made :)
*/
.icon-fb {
	color: green !important;
	
	/** transition */
	-webkit-transition: 0.5s linear;
	-moz-transition: 0.5s linear;
	-ms-transition: 0.5s linear;
	-o-transition: 0.5s linear;
	transition: 0.5s linear;
}

.icon-fb:hover {
	color: #3b5998 !important;
	
	/** glow */
	-webkit-box-shadow: 0px 0px 3px 5px #3b5998;
	-moz-box-shadow: 0px 0px 3px 5px #3b5998;
	box-shadow: 0px 0px 3px 5px #3b5998; 
	
	/** transition */
	-webkit-transition: 0.5s linear;
	-moz-transition: 0.5s linear;
	-ms-transition: 0.5s linear;
	-o-transition: 0.5s linear;
	transition: 0.5s linear;
}

.icon-tw {
	color: green !important;
	
	/** transition */
	-webkit-transition: 0.5s linear;
	-moz-transition: 0.5s linear;
	-ms-transition: 0.5s linear;
	-o-transition: 0.5s linear;
	transition: 0.5s linear;
}

.icon-tw:hover {
	color: #4099FF !important;
	
	/** glow */
	-webkit-box-shadow: 0px 0px 3px 5px #4099FF;
	-moz-box-shadow: 0px 0px 3px 5px #4099FF;
	box-shadow: 0px 0px 3px 5px #4099FF; 
	
	/** transition */
	-webkit-transition: 0.5s linear;
	-moz-transition: 0.5s linear;
	-ms-transition: 0.5s linear;
	-o-transition: 0.5s linear;
	transition: 0.5s linear;
}

.icon-yt {
	color: green !important;
	
	/** transition */
	-webkit-transition: 0.5s linear;
	-moz-transition: 0.5s linear;
	-ms-transition: 0.5s linear;
	-o-transition: 0.5s linear;
	transition: 0.5s linear;
}

.icon-yt:hover {
	color: #b31217 !important;
	
	/** glow */
	-webkit-box-shadow: 0px 0px 3px 5px #b31217;
	-moz-box-shadow: 0px 0px 3px 5px #b31217;
	box-shadow: 0px 0px 3px 5px #b31217; 
	
	/** transition */
	-webkit-transition: 0.5s linear;
	-moz-transition: 0.5s linear;
	-ms-transition: 0.5s linear;
	-o-transition: 0.5s linear;
	transition: 0.5s linear;
}

